--- a/biodiversity_project.ipynb
+++ b/biodiversity_project.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "4  Githopsis specularioides  Great Smoky Mountains National Park            85"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,6 +146,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 23281 entries, 0 to 23295\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   scientific_name  23281 non-null  object\n",
+      " 1   park_name        23281 non-null  object\n",
+      " 2   observations     23281 non-null  int64 \n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 727.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "observations.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -154,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +266,7 @@
        "4                                      Wapiti Or Elk                 NaN  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +321,7 @@
        "3312429"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +507,7 @@
        "       'Bryce National Park', 'Yellowstone National Park'], dtype=object)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +562,7 @@
        "F_onewayResult(statistic=75014.12663046071, pvalue=0.0)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +928,7 @@
        "Amphibian                             4           1           2            0"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1119,7 @@
        "[191 rows x 4 columns]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1143,7 @@
        "Name: conservation_status, dtype: int64"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1461,7 @@
        "839           196     Bird              Brown Pelican         In Recovery  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1607,7 @@
        "20589     No_Intervention  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2085,7 @@
        "10902                                              Racer     No_Intervention  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2082,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2134,7 +2160,7 @@
        "15511  Collomia tinctoria  Great Smoky Mountains National Park            10"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
