--- a/biodiversity_project.ipynb
+++ b/biodiversity_project.ipynb
@@ -956,6 +956,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reshaping the species_info dataframe into a new one without duplicates and in the same time without losing important informations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 909,
    "metadata": {},
@@ -1108,123 +1115,6 @@
    "source": [
     "duplicated_df = species_info[species_info.duplicated(subset='scientific_name', keep=False)].sort_values(by='scientific_name')\n",
     "duplicated_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 904,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>scientific_name</th>\n",
-       "      <th>common_names</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>160</th>\n",
-       "      <td>Myotis lucifugus</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>207</th>\n",
-       "      <td>Puma concolor</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>Castor canadensis</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>205</th>\n",
-       "      <td>Procyon lotor</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240</th>\n",
-       "      <td>Streptopelia decaocto</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>Galium aparine</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>Galium triflorum</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>Gavia immer</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>Gavia pacifica</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>273</th>\n",
-       "      <td>Zizia aptera</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>274 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           scientific_name  common_names\n",
-       "160       Myotis lucifugus             3\n",
-       "207          Puma concolor             3\n",
-       "41       Castor canadensis             3\n",
-       "205          Procyon lotor             3\n",
-       "240  Streptopelia decaocto             3\n",
-       "..                     ...           ...\n",
-       "98          Galium aparine             2\n",
-       "99        Galium triflorum             2\n",
-       "100            Gavia immer             2\n",
-       "101         Gavia pacifica             2\n",
-       "273           Zizia aptera             2\n",
-       "\n",
-       "[274 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 904,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "duplicated_df.groupby(['scientific_name']).common_names.count().reset_index().sort_values(by='common_names', ascending=False)"
    ]
   },
   {
@@ -1726,22 +1616,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "stacking all df's to create a new df with no duplicates (compare it to the original one then)"
+    "stacking all df's to create a new df with no duplicates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 923,
+   "execution_count": 936,
    "metadata": {},
    "outputs": [
     {
@@ -1884,180 +1767,18 @@
        "[5541 rows x 4 columns]"
       ]
      },
-     "execution_count": 923,
+     "execution_count": 936,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "no_dup_al_all_df = species_info.drop_duplicates(subset='scientific_name', keep=False).sort_values(by='scientific_name')\n",
+    "species_with_no_occurences_at_all = species_info.drop_duplicates(subset='scientific_name', keep=False).sort_values(by='scientific_name')\n",
     "\n",
-    "df_list = [no_dup_al_all_df, two_no_dup_df, three_no_dup_df]\n",
-    "\n",
+    "df_list = [species_with_no_occurences_at_all, two_no_dup_df, three_no_dup_df]\n",
     "species_info_no_dup = pd.concat(df_list)\n",
     "\n",
     "species_info_no_dup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 925,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>category</th>\n",
-       "      <th>scientific_name</th>\n",
-       "      <th>common_names</th>\n",
-       "      <th>conservation_status</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Mammal</td>\n",
-       "      <td>Clethrionomys gapperi gapperi</td>\n",
-       "      <td>Gapper's Red-Backed Vole</td>\n",
-       "      <td>No_Intervention</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Mammal</td>\n",
-       "      <td>Bos bison</td>\n",
-       "      <td>American Bison, Bison</td>\n",
-       "      <td>No_Intervention</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Mammal</td>\n",
-       "      <td>Bos taurus</td>\n",
-       "      <td>Aurochs, Aurochs, Domestic Cattle (Feral), Dom...</td>\n",
-       "      <td>No_Intervention</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Mammal</td>\n",
-       "      <td>Ovis aries</td>\n",
-       "      <td>Domestic Sheep, Mouflon, Red Sheep, Sheep (Feral)</td>\n",
-       "      <td>No_Intervention</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Mammal</td>\n",
-       "      <td>Cervus elaphus</td>\n",
-       "      <td>Wapiti Or Elk</td>\n",
-       "      <td>No_Intervention</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5819</th>\n",
-       "      <td>Vascular Plant</td>\n",
-       "      <td>Solanum parishii</td>\n",
-       "      <td>Parish's Nightshade</td>\n",
-       "      <td>No_Intervention</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5820</th>\n",
-       "      <td>Vascular Plant</td>\n",
-       "      <td>Solanum xanti</td>\n",
-       "      <td>Chaparral Nightshade, Purple Nightshade</td>\n",
-       "      <td>No_Intervention</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5821</th>\n",
-       "      <td>Vascular Plant</td>\n",
-       "      <td>Parthenocissus vitacea</td>\n",
-       "      <td>Thicket Creeper, Virginia Creeper, Woodbine</td>\n",
-       "      <td>No_Intervention</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5822</th>\n",
-       "      <td>Vascular Plant</td>\n",
-       "      <td>Vitis californica</td>\n",
-       "      <td>California Grape, California Wild Grape</td>\n",
-       "      <td>No_Intervention</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5823</th>\n",
-       "      <td>Vascular Plant</td>\n",
-       "      <td>Tribulus terrestris</td>\n",
-       "      <td>Bullhead, Caltrop, Goathead, Mexican Sandbur, ...</td>\n",
-       "      <td>No_Intervention</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5541 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            category                scientific_name  \\\n",
-       "0             Mammal  Clethrionomys gapperi gapperi   \n",
-       "1             Mammal                      Bos bison   \n",
-       "2             Mammal                     Bos taurus   \n",
-       "3             Mammal                     Ovis aries   \n",
-       "4             Mammal                 Cervus elaphus   \n",
-       "...              ...                            ...   \n",
-       "5819  Vascular Plant               Solanum parishii   \n",
-       "5820  Vascular Plant                  Solanum xanti   \n",
-       "5821  Vascular Plant         Parthenocissus vitacea   \n",
-       "5822  Vascular Plant              Vitis californica   \n",
-       "5823  Vascular Plant            Tribulus terrestris   \n",
-       "\n",
-       "                                           common_names conservation_status  \n",
-       "0                              Gapper's Red-Backed Vole     No_Intervention  \n",
-       "1                                 American Bison, Bison     No_Intervention  \n",
-       "2     Aurochs, Aurochs, Domestic Cattle (Feral), Dom...     No_Intervention  \n",
-       "3     Domestic Sheep, Mouflon, Red Sheep, Sheep (Feral)     No_Intervention  \n",
-       "4                                         Wapiti Or Elk     No_Intervention  \n",
-       "...                                                 ...                 ...  \n",
-       "5819                                Parish's Nightshade     No_Intervention  \n",
-       "5820            Chaparral Nightshade, Purple Nightshade     No_Intervention  \n",
-       "5821        Thicket Creeper, Virginia Creeper, Woodbine     No_Intervention  \n",
-       "5822            California Grape, California Wild Grape     No_Intervention  \n",
-       "5823  Bullhead, Caltrop, Goathead, Mexican Sandbur, ...     No_Intervention  \n",
-       "\n",
-       "[5541 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 925,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "species_info.drop_duplicates(subset='scientific_name')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "perfect job they are equal, what an amazing work good job and i hope allah will benefit me from all this"
    ]
   }
  ],
