--- a/biodiversity_project.ipynb
+++ b/biodiversity_project.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "4  Githopsis specularioides  Great Smoky Mountains National Park            85"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "4                                      Wapiti Or Elk                 NaN  "
       ]
      },
-     "execution_count": 225,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "[557 rows x 4 columns]"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "[530 rows x 4 columns]"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
        "[265 rows x 4 columns]"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
        "4514              Eurasian Collared Dove, Collared-Dove                 NaN  "
       ]
      },
-     "execution_count": 232,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        "[5541 rows x 4 columns]"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
        "3312429"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
        "       'Bryce National Park', 'Yellowstone National Park'], dtype=object)"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
        "F_onewayResult(statistic=75014.12663046071, pvalue=0.0)"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1775,7 @@
        "[176 rows x 4 columns]"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1787,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1803,36 +1803,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Bat                               4\n",
-       "Bighorn Sheep                     2\n",
-       "River Otter                       2\n",
-       "Long-Eared Myotis                 2\n",
-       "Big-Eared Woodrat                 2\n",
-       "Grizzly Bear                      2\n",
-       "Marsh Rice Rat                    2\n",
+       "Least Chipmunk                    2\n",
+       "American Mink                     2\n",
        "Bison                             2\n",
-       "Long-Legged Myotis                2\n",
-       "Golden-Mantled Ground Squirrel    2\n",
-       "Red Fox                           2\n",
+       "Aurochs                           2\n",
+       "Ermine                            2\n",
        "Spotted Bat                       2\n",
        "Fringed Myotis                    2\n",
-       "Pallid Bat                        2\n",
-       "Muskrat                           2\n",
-       "Least Chipmunk                    2\n",
-       "Ermine                            2\n",
-       "Myotis                            2\n",
        "Uinta Chipmunk                    2\n",
+       "Muskrat                           2\n",
+       "Mountain Goat                     2\n",
+       "Fisher                            2\n",
+       "Long-Eared Myotis                 2\n",
+       "Myotis                            2\n",
+       "Big-Eared Woodrat                 2\n",
+       "Golden-Mantled Ground Squirrel    2\n",
+       "Grizzly Bear                      2\n",
+       "Bighorn Sheep                     2\n",
        "Mule Deer                         2\n",
+       "River Otter                       2\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,14 +1844,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-253-29c2506e9033>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-131-29c2506e9033>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1867,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1928,7 +1928,7 @@
        "3               Yosemite National Park          3311"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1946,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1969,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1981,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -2084,7 +2084,7 @@
        "Amphibian                             4           1           2            0"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2099,7 +2099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -2139,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -2243,7 +2243,7 @@
        "6            1.079305  "
       ]
      },
-     "execution_count": 259,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2266,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -2292,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2304,7 +2304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -2389,7 +2389,7 @@
        "Vascular Plant      4216     46"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2398,12 +2398,13 @@
     "cross_tab = pd.crosstab(species_info_no_dup['category'],\n",
     "                            species_info_no_dup['need_to_interfere'], \n",
     "                               margins = False)\n",
+    "\n",
     "cross_tab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
